Fixing the column spacing for CMB2

--- a/assets/css/lsx-projects-admin-rtl.css
+++ b/assets/css/lsx-projects-admin-rtl.css
@@ -1,9 +1,9 @@
 /* lsx-projects-admin.css */
 /** The CMB2 Settings Page Tabbed Theme. @package lsx-search */
 /* CMB2 Settings Styles */
-.wp-admin.project_page_lsx_projects_options span.version { font-size: 0.4em; font-weight: 700; position: relative; top: -4px; right: 5px; padding: 2px 5px; border: 1px solid #ccc; background: #f5f5f5; border-radius: 10px; background-clip: padding-box; }
+.wp-admin.project_page_lsx_projects_options span.version { font-size: 0.4em; font-weight: 700; position: relative; top: -4px; right: 5px; padding: 2px 5px; border: 1px solid #ccc; background: #f5f5f5; border-radius: 10px; -moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box; }
 
-.wp-admin.project_page_lsx_projects_options .wp-filter { background: none; border: none; box-shadow: none; margin: 0; padding-right: 0; }
+.wp-admin.project_page_lsx_projects_options .wp-filter { background: none; border: none; -webkit-box-shadow: none; box-shadow: none; margin: 0; padding-right: 0; }
 
 .wp-admin.project_page_lsx_projects_options .wp-filter .filter-links .current { border-bottom: none; font-weight: 600; color: #23282d; }
 
@@ -31,7 +31,7 @@
 
 .wp-admin.project_page_lsx_projects_options .cmb2-wrap.form-table .tab.tab-nav .cmb-row div.cmb-td .cmb2-metabox-title { margin-top: 0px; }
 
-.wp-admin.project_page_lsx_projects_options .cmb2-wrap.form-table .tab.tab-nav .cmb-row div.cmb-td select { font-size: 14px; line-height: 2; color: #32373c; border-color: #7e8993; box-shadow: none; border-radius: 3px; padding: 0 8px 0 24px; min-height: 30px; max-width: 25rem; -webkit-appearance: none; background-size: 16px 16px; cursor: pointer; vertical-align: middle; }
+.wp-admin.project_page_lsx_projects_options .cmb2-wrap.form-table .tab.tab-nav .cmb-row div.cmb-td select { font-size: 14px; line-height: 2; color: #32373c; border-color: #7e8993; -webkit-box-shadow: none; box-shadow: none; border-radius: 3px; padding: 0 8px 0 24px; min-height: 30px; max-width: 25rem; -webkit-appearance: none; background-size: 16px 16px; cursor: pointer; vertical-align: middle; }
 
 .wp-admin.project_page_lsx_projects_options .cmb2-wrap.form-table .tab.tab-nav .cmb-row div.cmb-td .cmb2-media-status { padding-top: 10px; }
 
@@ -53,7 +53,7 @@
 
 .cmb-row.lsx-admin-row .lsx-field-col-25 { width: 25%; }
 
-.cmb-row.lsx-admin-row .lsx-field-col-33 { width: 33.333%; }
+.cmb-row.lsx-admin-row .lsx-field-col-33 { width: 31.333%; padding-left: 2%; }
 
 .cmb-row.lsx-admin-row .lsx-field-col-50 { width: 50%; }
 
